fix: change manifest

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,32 +9,32 @@
       {
         "src": "/svg/cat.svg",
         "sizes": "48x48",
-        "type": "image/svg"
+        "type": "image/png"
       },
       {
         "src": "/svg/cat.svg",
         "sizes": "72x72",
-        "type": "image/svg"
+        "type": "image/png"
       },
       {
         "src": "/svg/cat.svg",
         "sizes": "96x96",
-        "type": "image/svg"
+        "type": "image/png"
       },
       {
-        "src": "i/svg/cat.svg",
+        "src": "/svg/cat.svg",
         "sizes": "144x144",
-        "type": "image/svg"
+        "type": "image/png"
       },
       {
-        "src": "i/svg/cat.svg",
+        "src": "/svg/cat.svg",
         "sizes": "168x168",
-        "type": "image/svg"
+        "type": "image/png"
       },
       {
-        "src": "i/svg/cat.svg",
+        "src": "/svg/cat.svg",
         "sizes": "192x192",
-        "type": "image/svg"
+        "type": "image/png"
       }
     ]
   }
