feat: add ogg audio and 512x512 icon

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,6 +25,11 @@
         "src": "/png/meow-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
+      },
+      {
+        "src": "/png/meow-512x512.png",
+        "sizes": "512x512",
+        "type": "image/png"
       }
     ]
   }
